# video_to_text

./: README.md  app.py  pyproject.toml  test.aac
base_and_generator/: __init__.py  base.py  loop.py
config/: constants.py
dao/: __init__.py
db/: alchemy.py  index.py  peewee.py  test_peewee.py
deepseek/: open_ai_tool.py
generator/: base.py  loop.py  parallel.py
image2video/: __init__.py  index.py
image_gen/: __init__.py  index.py
lib/: __init__.py  index.py  singleton.py
pattern/: index.py
pool/: README.md  __init__.py  index.py  thread_pool.py
redis/: __init__.py  index.py
request/: __init__.py  open_ai_tool.py  test.py
service/: __init__.py
text2audio/: __init__.py  index.py
word_segmentation/: __init__.py  index.py  index_cn.py  index_en.py  install.py
