[tool.poetry]
name = "video_to_text"
version = "0.1.0"
description = ""
authors = ["qiaochao <qiaochao@icourt.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
openai = "^1.37.0"
asyncio = "^3.4.3"
aiohttp = "^3.10.1"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
jieba = "^0.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
