[tool.poetry]
name = "video_to_text"
version = "0.1.0"
description = ""
authors = ["qiaochao <qiaochao@icourt.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
flask = "^3.0.3"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
openai = "^1.37.0"
asyncio = "^3.4.3"
aiohttp = "^3.10.1"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
jieba = "^0.42.1"
tts = { version = "^0.22.0", python = ">=3.9.0,<3.12" }
pyfunctional = "^1.5.0"
replicate = "^0.31.0"
dashscope = "^1.20.3"
requests = "^2.32.3"
aiomysql = "^0.2.0"
cryptography = "^43.0.0"
sqlalchemy = "^2.0.32"
greenlet = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
